# Capstone-Final-Mile

./: .gitignore  LICENSE  README.md
Map_Model/: model.config  model.sdf
Quadrotor_Dynamics_Simulation/: README.rtf  Untitled document.docx  cmds.mat  commands.m  drawAircraft.m  drone_params.m  gyroFcn.m  kalman_covariances.asv  kalman_covariances.m  mavStateTransitionFcn.m  mav_dynamics.m  mavsim.slx  mavsim.slx.original  mavsim.slx.r2019b  mavsim.slxc  param_quad.m  raw_localization_commands.m  trajectory.mat  vel_to_traj.m
catkin_ws/src/autonomy_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/autonomy_msgs/msg/: GoalPose.msg  GoalReached.msg  HospitalGoal.msg  Landing.msg  Landing_Status.msg  Status.msg  Takeoff_Status.msg  Trajectory.msg
catkin_ws/src/command_log/: CMakeLists.txt  package.xml
catkin_ws/src/costmap/: CMakeLists.txt  package.xml
catkin_ws/src/diagnostics/: CMakeLists.txt  package.xml
catkin_ws/src/global_planner/: CMakeLists.txt  package.xml
catkin_ws/src/landing/: CMakeLists.txt  package.xml
catkin_ws/src/local_costmap/: CMakeLists.txt  package.xml
catkin_ws/src/local_navigator/: CMakeLists.txt  package.xml
catkin_ws/src/local_planner/: CMakeLists.txt  package.xml
catkin_ws/src/localization/: CMakeLists.txt  package.xml
catkin_ws/src/takeoff/: CMakeLists.txt  package.xml
catkin_ws/src/user_interface/: CMakeLists.txt  (+1 more)
payload_calculations/: calculate_dimensions.m
payload_calculations/thermal_analysis/: Box.stl  Thermal_Sim_Model.stl  Thermal_Sim_Model_With_Hole.stl  thermal_model.m  thermal_transient_response.avi
(+177 files in other folders)
