<package format="2">
  <name>autonomy_msgs</name>
  <version>0.0.1</version>
  <description>
  Messages for the drone stuff we be doin
  </description>
  <maintainer email="jrblankenhorn@wpi.edu">jrblankenhorn</maintainer>
  <license>APACHE 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>std_msgs</depend>

</package>

